--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,17 @@
             <version>2.8.2</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
